// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationsList /> renders correctly children 1`] = `
<div
  className="talixo-notifications-list talixo-notifications-list--start talixo-notifications-list--bottom"
>
  <div
    className="talixo-notifications-list__wrapper"
  >
    <TransitionGroup
      childFactory={[Function]}
      className="talixo-notifications-list__content"
      component="div"
    >
      <Fade
        key="2"
      >
        <Notification
          onClose={[Function]}
          type="error"
        >
          Notification 1
        </Notification>
      </Fade>
      <Fade
        key="3"
      >
        <Notification
          onClose={[Function]}
        >
          Notification 2
        </Notification>
      </Fade>
      <Fade
        key="4"
      >
        <Notification
          id="10"
          onClose={[Function]}
          type="success"
        >
          Notification 3
        </Notification>
      </Fade>
    </TransitionGroup>
  </div>
</div>
`;

exports[`<NotificationsList /> renders correctly one child 1`] = `
<div
  className="talixo-notifications-list talixo-notifications-list--start talixo-notifications-list--bottom"
>
  <div
    className="talixo-notifications-list__wrapper"
  >
    <TransitionGroup
      childFactory={[Function]}
      className="talixo-notifications-list__content"
      component="div"
    />
  </div>
</div>
`;
